--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "postinstall": "is-ci || husky install",
     "partytown": "partytown copylib ./public/~partytown",
     "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "build-storybook": "build-storybook",
+    "start":"gatsby clean && yarn partytown && gatsby develop"
   },
   "engines": {
     "node": ">=14"
@@ -34,6 +35,7 @@
     "@faststore/sdk": "^1.7.33",
     "@faststore/ui": "^1.7.33",
     "@reach/router": "^1.3.4",
+    "@vtex/gatsby-source-cms": "^0.2.5",
     "@vtex/graphql-utils": "^1.7.33",
     "gatsby": "^4.11.1",
     "gatsby-plugin-gatsby-cloud": "^4.11.1",
